--- a/src/dtpanel/Makefile
+++ b/src/dtpanel/Makefile
@@ -12,7 +12,7 @@ ${OUT}: ${OBJ}
 	${CPP} -o ${OUT} ${OBJ} -L../../lib ${LDFLAGS} -lmotifmm -lopencde
 
 .cpp.o:
-	${CPP} ${CPPFLAGS} -DPLATFORM_${PLATFORM} -c -I../../include $< -o $@
+	${CPP} ${CPPFLAGS} -DPLATFORM_${PLATFORM} -c -I../libmotifmm/include -I../libopencde/include $< -o $@
 
 .PHONY: clean
 clean:
