Add required objects to libmotifmm build

--- a/src/libmotifmm/Makefile
+++ b/src/libmotifmm/Makefile
@@ -1,6 +1,6 @@
 include ../../config.Mk
 
-OBJ=Application.o Component.o Window.o MessageBox.o Panel.o Button.o ScrolledText.o Dialog.o Container.o Text.o Label.o Password.o MenuBar.o PulldownMenu.o Color.o ToggleButton.o Custom.o IconButton.o Timer.o
+OBJ=Application.o Component.o Window.o MessageBox.o Panel.o Button.o ScrolledText.o Dialog.o Container.o Text.o Label.o Password.o MenuBar.o PulldownMenu.o Color.o ToggleButton.o Custom.o IconButton.o Timer.o ScrolledPanel.o ScrollBar.o Separator.o
 OUT=../../lib/libmotifmm.so
 
 .SUFFIXES: .o
