Add terminal icons.

--- a/etc/opencde/dtpanel/menus.ini
+++ b/etc/opencde/dtpanel/menus.ini
@@ -32,13 +32,13 @@
 <Hardware>
   pixmap=SDtmedia.rmm.l.pm
 <System>
-  pixmap=Dtterm.l.pm
+  pixmap=dtterm.xpm
   command=xterm
   [Terminal]
-    pixmap=Fpterm.m.pm
+    pixmap=dtterm.m.pm
     command=xterm
   [Root Terminal]
-    pixmap=Fpterm.m.pm
+    pixmap=dtterm-root.m.xpm
     command=xterm -e su -
 <Customization>
   pixmap=Fpstyle.l.pm
