Add calculator icon to menu config.

--- a/etc/opencde/dtpanel/menus.ini
+++ b/etc/opencde/dtpanel/menus.ini
@@ -4,7 +4,7 @@
     pixmap=dtterm.m.xpm
     command=xterm
   [Calculator]
-    pixmap=Dtcalc.m.pm
+    pixmap=calculator.m.xpm
     command=xcalc
   [Clock]
     pixmap=clock.m.xpm
