Remove non-Free backdrops.  Added blackmarble.xpm placeholder.

--- a/etc/opencde/dtpanel/menus.ini
+++ b/etc/opencde/dtpanel/menus.ini
@@ -22,13 +22,13 @@
     command=firefox
 <Desktops>
   [One]
-    backdrop=WaterDrops.xpm
+    backdrop=blackmarble.xpm
   [Two]
-    backdrop=SolarisLogo.xpm
+    backdrop=blackmarble.xpm
   [Three]
-    backdrop=SolarisLogo.pm
+    backdrop=blackmarble.xpm
   [Four]
-    backdrop=Squares.pm
+    backdrop=blackmarble.xpm
 <Hardware>
   pixmap=Multimedia2.xpm
 <System>
