* Rename earth_3d.s.xpm to earth_3d.m.xpm (fixes default browser icon) * Fix wrong terminal icon path

--- a/etc/opencde/dtpanel/menus.ini
+++ b/etc/opencde/dtpanel/menus.ini
@@ -35,7 +35,7 @@
   pixmap=dtterm.xpm
   command=xterm
   [Terminal]
-    pixmap=dtterm.m.pm
+    pixmap=dtterm.m.xpm
     command=xterm
   [Root Terminal]
     pixmap=dtterm-root.m.xpm
