--- a/src/dtpad/Makefile
+++ b/src/dtpad/Makefile
@@ -26,7 +26,7 @@
              RM = rm -f
              CC = gcc
          CFLAGS = $(USER_CFLAGS) 
-           LIBS = $(USER_LIBRARIES) -lXm -lXt -lSM -lICE -lXp -lXext -lX11
+           LIBS = $(USER_LIBRARIES) -lXm -lXt -lSM -lICE -lXp -lXext -lX11 -lm
 
 OFILES = $(USER_OBJS) \
          main.o \
