--- a/src/libmotifmm/Makefile
+++ b/src/libmotifmm/Makefile
@@ -1,7 +1,10 @@
 include ../../config.Mk
 
 OBJ=Application.o Component.o Window.o MessageBox.o Panel.o Button.o ScrolledText.o Dialog.o Container.o Text.o Label.o Password.o MenuBar.o PulldownMenu.o Color.o ToggleButton.o Custom.o IconButton.o Timer.o ScrolledPanel.o ScrollBar.o Separator.o
-OUT=../../lib/libmotifmm.so
+BASELIB=libmotifmm.so
+SONAME=${BASELIB}.2
+OUTFILE=${SONAME}.0.0
+OUT=../../lib/${OUTFILE}
 
 .SUFFIXES: .o
 
@@ -9,7 +12,9 @@ OUT=../../lib/libmotifmm.so
 all: ${OUT}
 
 ${OUT}: ${OBJ}
-	${CPP} -shared -o ${OUT} ${OBJ} ${LDFLAGS} -lXpm -lXm -lXt -lX11
+	${CPP} -shared -Wl,-soname,${SONAME} -o ${OUT} ${OBJ} ${LDFLAGS} -lXpm -lXm -lXt -lX11
+	ln -s ${OUTFILE} ../../lib/${SONAME}
+	ln -s ${OUTFILE} ../../lib/${BASELIB}
 	mkdir -p ../../include
 	cp -r include/* ../../include
 
