Makefile fixes-support DESTDIR, fix make clean for dtpad

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 all:
 	@${MAKE} -C libmotifmm
 	@${MAKE} -C libopencde
-	@${MAKE} -C dtpad
+	@${MAKE} -C dtpad global
 	@${MAKE} -C dtlock
 	@${MAKE} -C dtlogin
 	@${MAKE} -C dtsplash
@@ -13,6 +13,7 @@ clean:
 	@${MAKE} -C libmotifmm clean
 	@${MAKE} -C libopencde clean
 	@${MAKE} -C dtpad clean
+	rm ../bin/dtpad
 	@${MAKE} -C dtlock clean
 	@${MAKE} -C dtlogin clean
 	@${MAKE} -C dtsplash clean
