Change 'Customization' icon to controlpanel.xpm

--- a/etc/opencde/dtpanel/menus.ini
+++ b/etc/opencde/dtpanel/menus.ini
@@ -41,7 +41,7 @@
     pixmap=dtterm-root.m.xpm
     command=xterm -e su -
 <Customization>
-  pixmap=Fpstyle.l.pm
+  pixmap=controlpanel.xpm
 <Documentation>
   pixmap=Fphelp.l.pm
 <Trash>
