Add documentation.xpm icon, set documentation.xpm as default for 'Documentation' menu.

--- a/etc/opencde/dtpanel/menus.ini
+++ b/etc/opencde/dtpanel/menus.ini
@@ -43,6 +43,6 @@
 <Customization>
   pixmap=controlpanel.xpm
 <Documentation>
-  pixmap=Fphelp.l.pm
+  pixmap=documentation.xpm
 <Trash>
   pixmap=Fptrsh.l.pm
