Rename icons to ODt* naming convention.

--- a/etc/opencde/dtpanel/menus.ini
+++ b/etc/opencde/dtpanel/menus.ini
@@ -1,24 +1,24 @@
 <Clock>
   command=xterm
   [Terminal]
-    pixmap=dtterm.m.xpm
+    pixmap=ODtterm.m.xpm
     command=xterm
   [Calculator]
-    pixmap=calculator.m.xpm
+    pixmap=ODtcalc.m.xpm
     command=xcalc
   [Clock]
-    pixmap=clock.m.xpm
+    pixmap=ODtclock.m.xpm
     command=xclock
 <Calendar>
 <Documents>
-  pixmap=FileManager.xpm
+  pixmap=ODtfile.l.xpm
 <Applications>
-  pixmap=FileManager.xpm
+  pixmap=ODtfile.l.xpm
 <Internet>
-  pixmap=earth_3d.xpm
+  pixmap=ODtwww.l.xpm
   command=firefox
   [Mozilla Firefox]
-    pixmap=earth_3d.m.xpm
+    pixmap=ODtwww.m.xpm
     command=firefox
 <Desktops>
   [One]
@@ -32,17 +32,17 @@
 <Hardware>
   pixmap=Multimedia2.xpm
 <System>
-  pixmap=dtterm.xpm
+  pixmap=ODtterm.l.xpm
   command=xterm
   [Terminal]
-    pixmap=dtterm.m.xpm
+    pixmap=ODtterm.m.xpm
     command=xterm
   [Root Terminal]
-    pixmap=dtterm-root.m.xpm
+    pixmap=ODtterm-root.m.xpm
     command=xterm -e su -
 <Customization>
-  pixmap=controlpanel.xpm
+  pixmap=ODtctrlpanel.l.xpm
 <Documentation>
-  pixmap=documentation.xpm
+  pixmap=ODthelp.l.xpm
 <Trash>
   pixmap=Fptrsh.l.pm
