--- a/etc/opencde/dtpanel/menus.ini
+++ b/etc/opencde/dtpanel/menus.ini
@@ -24,11 +24,11 @@
   [One]
     backdrop=blackmarble.xpm
   [Two]
-    backdrop=blackmarble.xpm
+    backdrop=blue_squares.xpm
   [Three]
-    backdrop=blackmarble.xpm
+    backdrop=boxed_layer.xpm
   [Four]
-    backdrop=blackmarble.xpm
+    backdrop=metal_holes.xpm
 <Hardware>
   pixmap=Multimedia2.xpm
 <System>
@@ -41,8 +41,9 @@
     pixmap=ODtterm-root.m.xpm
     command=xterm -e su -
 <Customization>
-  pixmap=ODtctrlpanel.l.xpm
+  pixmap=ODtStyle.l.xpm
+  command=editres
 <Documentation>
   pixmap=ODthelp.l.xpm
 <Trash>
-  pixmap=Fptrsh.l.pm
+  pixmap=ODttrsh.l.pm
