Update the build options for Dtpad
Shoudl fix some build issues on Debian.

--- a/src/dtpad/Makefile
+++ b/src/dtpad/Makefile
@@ -27,7 +27,7 @@ include ../../config.Mk
              RM = rm -f
              CC = gcc
          CFLAGS = $(USER_CFLAGS) 
-           LIBS = $(USER_LIBRARIES) -lXm -lXt -lSM -lICE -lXp -lXext -lX11
+           LIBS = $(USER_LIBRARIES) -lXm -lXt -lSM -lICE -lXp -lXext -lX11 -lm
 
 OFILES = $(USER_OBJS) \
          main.o \
