--- a/src/dtfile/Makefile
+++ b/src/dtfile/Makefile
@@ -9,7 +9,7 @@ OUT=../../bin/dtfile
 all: ${OUT}
 
 ${OUT}: ${OBJ}
-	${CPP} -o ${OUT} ${OBJ} -L../../lib ${LDFLAGS} -lmotifmm -lopencde
+	${CPP} -o ${OUT} ${OBJ} -L../../lib ${LDFLAGS} -lmotifmm -lopencde -lX11 -lXm -lXpm -lXt
 
 .cpp.o:
 	${CPP} ${CPPFLAGS} -DPLATFORM_${PLATFORM} -c -I../libmotifmm/include -I../libopencde/include $< -o $@
