Icons now point to new icons.

--- a/etc/opencde/dtpanel/menus.ini
+++ b/etc/opencde/dtpanel/menus.ini
@@ -11,11 +11,11 @@
     command=xclock
 <Calendar>
 <Documents>
-  pixmap=ODtfile.l.xpm
+  pixmap=OFPuser-home.xpm
 <Applications>
-  pixmap=ODtfile.l.xpm
+  pixmap=OFPhardrive.xpm
 <Internet>
-  pixmap=ODtwww.l.xpm
+  pixmap=OFPnetscape.xpm
   command=firefox
   [Mozilla Firefox]
     pixmap=ODtwww.m.xpm
@@ -30,9 +30,9 @@
   [Four]
     backdrop=metal_holes.xpm
 <Hardware>
-  pixmap=Multimedia2.xpm
+  pixmap=OFPprinter.xpm
 <System>
-  pixmap=ODtterm.l.xpm
+  pixmap=OFPxconsole.xpm
   command=xterm
   [Terminal]
     pixmap=ODtterm.m.xpm
@@ -41,9 +41,9 @@
     pixmap=ODtterm-root.m.xpm
     command=xterm -e su -
 <Customization>
-  pixmap=ODtStyle.l.xpm
+  pixmap=OFPpreferences.xpm
   command=editres
 <Documentation>
-  pixmap=ODthelp.l.xpm
+  pixmap=OFPhelp-browser.xpm
 <Trash>
-  pixmap=ODttrsh.l.pm
+  pixmap=OFPtrash.xpm
